--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "author": "Zishran Julbert D. Garces <zishgarces@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@types/express": "^4.17.1",
+    "@hapi/joi": "^15.1.1",
     "debug": "^4.1.1",
     "express": "^4.17.1",
-    "joi": "^14.3.1",
+    "joi-openapi": "^0.1.8",
     "mongodb": "^3.2.1",
     "mongodb-extended-json": "^1.10.1",
     "oas-tools": "^2.1.7",
@@ -30,6 +30,9 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.0",
+    "@types/debug": "^4.1.5",
+    "@types/express": "^4.17.1",
+    "@types/hapi__joi": "^15.0.3",
     "@types/js-yaml": "^3.12.1",
     "@types/mocha": "^5.2.7",
     "@types/mongodb": "^3.3.1",
