--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "joi-openapi": "^0.1.8",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.1",
     "oas-tools": "^2.1.7",
     "saslprep": "^1.0.3"
@@ -36,6 +37,7 @@
     "@types/express": "^4.17.1",
     "@types/hapi__joi": "^15.0.3",
     "@types/js-yaml": "^3.12.1",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/mocha": "^5.2.7",
     "@types/mongodb": "^3.3.1",
     "@types/node": "^12.7.3",
